force-app/main/default/objects/Entrevista__c/Entrevista__c.object-meta.xml
<CustomObject>
    <label>Entrevista</label>
    <nameField>
        <displayFormat>E{0}</displayFormat>
        <label>Nº da Entrevista</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entrevistas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>