force-app/main/default/objects/Entrevista__c/fields/Comente_sobre_seu_antepen_ltimo_emprego__c.field-meta.xml
<CustomField>
    <fullName>Comente_sobre_seu_antepen_ltimo_emprego__c</fullName>
    <inlineHelpText>Comente sobre seu penúltimo emprego</inlineHelpText>
    <label>5°Comente sobre seu antepenúltimo em...</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>