force-app/main/default/objects/Entrevista__c/fields/Comente_sobre_seu_pen_ltimo_emprego__c.field-meta.xml
<CustomField>
    <fullName>Comente_sobre_seu_pen_ltimo_emprego__c</fullName>
    <description>Comente sobre seu penúl﻿timo emprego</description>
    <inlineHelpText>Comente sobre seu penúl﻿timo emprego</inlineHelpText>
    <label>4° Comente sobre seu penúltimo emprego</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>