force-app/main/default/objects/Entrevista__c/fields/Comente_sobre_sua_escolaridade_atual__c.field-meta.xml
<CustomField>
    <fullName>Comente_sobre_sua_escolaridade_atual__c</fullName>
    <label>2°Comente sobre sua escolaridade atual</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>