force-app/main/default/objects/Entrevista__c/fields/Comente_sobre_sua_vida_pessoal__c.field-meta.xml
<CustomField>
    <fullName>Comente_sobre_sua_vida_pessoal__c</fullName>
    <label>1°Comente sobre sua vida pessoal</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>