force-app/main/default/objects/Entrevista__c/fields/Como_soube_desta_vaga__c.field-meta.xml
<CustomField>
    <fullName>Como_soube_desta_vaga__c</fullName>
    <label>12° *Como soube desta vaga?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>