force-app/main/default/objects/Entrevista__c/fields/Data_e_Hora__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora__c</fullName>
    <label>Data e Hora</label>
    <type>DateTime</type>
</CustomField>