force-app/main/default/objects/Entrevista__c/fields/Disponibilidade_p_viagem_e_hora_extra__c.field-meta.xml
<CustomField>
    <fullName>Disponibilidade_p_viagem_e_hora_extra__c</fullName>
    <description>Disponibilidade p/ viagem e hora extra</description>
    <inlineHelpText>Disponibilidade p/ viagem e hora extra</inlineHelpText>
    <label>10°Disponibilidade p/ viagem e hora....</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>