force-app/main/default/objects/Entrevista__c/fields/Entrevistador__c.field-meta.xml
<CustomField>
    <fullName>Entrevistador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entrevistador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Entrevistas</relationshipName>
    <type>Lookup</type>
</CustomField>