force-app/main/default/objects/Entrevista__c/fields/Pior_empresa_em_que_j_atuou__c.field-meta.xml
<CustomField>
    <fullName>Pior_empresa_em_que_j_atuou__c</fullName>
    <label>Pior empresa em que já atuou</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>