force-app/main/default/objects/Entrevista__c/fields/Pior_empresa_que_voc_j_tra__c.field-meta.xml
<CustomField>
    <fullName>Pior_empresa_que_voc_j_tra__c</fullName>
    <description>Qual foi a pior empresa que voce já trabalhou analisando a sua cultura?</description>
    <inlineHelpText>Qual foi a pior empresa que voce já trabalhou analisando a sua cultura?</inlineHelpText>
    <label>6°Qual foi a pior empresa que você já...</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>