force-app/main/default/objects/Entrevista__c/fields/Qual_o_tipo_de_pessoa_mais_dif_cil__c.field-meta.xml
<CustomField>
    <fullName>Qual_o_tipo_de_pessoa_mais_dif_cil__c</fullName>
    <description>Qual é o tipo de pessoa mais difícil que existe para trabalhar ou conviver?</description>
    <inlineHelpText>Qual é o tipo de pessoa mais difícil que existe para trabalhar ou conviver?</inlineHelpText>
    <label>7°Qual é o tipo de pessoa mais difí ...</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>