force-app/main/default/objects/Entrevista__c/fields/Qual_sua_pretens_o_de_sal_rio_hoje__c.field-meta.xml
<CustomField>
    <fullName>Qual_sua_pretens_o_de_sal_rio_hoje__c</fullName>
    <label>11°Qual é sua pretensão de salário hoje?</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>