force-app/main/default/objects/Entrevista__c/fields/Quem_indicou__c.field-meta.xml
<CustomField>
    <fullName>Quem_indicou__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quem indicou?</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>001i00000085QYb</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>0015A00002GC6r6</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>0016e00003JCYFt</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>001U40000010gmg</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Entrevistas</relationshipLabel>
    <relationshipName>Entrevistas</relationshipName>
    <type>Lookup</type>
</CustomField>