force-app/main/default/objects/Entrevista__c/fields/Vaga__c.field-meta.xml
<CustomField>
    <fullName>Vaga__c</fullName>
    <formula>Candidato__r.Cargo_Pretendido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vaga</label>
    <type>Text</type>
</CustomField>