force-app/main/default/objects/Entrevista__c/fields/Xadm_1__c.field-meta.xml
<CustomField>
    <fullName>Xadm_1__c</fullName>
    <description>1. Quais são seus objetivos pessoais e profissionais para os próximos 5 anos?</description>
    <inlineHelpText>1. Quais são seus objetivos pessoais e profissionais para os próximos 5 anos?</inlineHelpText>
    <label>1.Quais são seus objetivos pesso...?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>