force-app/main/default/objects/Entrevista__c/fields/Xadm_3__c.field-meta.xml
<CustomField>
    <fullName>Xadm_3__c</fullName>
    <description>3. Descreva uma situação em que você teve que lidar com uma tarefa complexa de forma eficiente. Como você organizou suas atividades e quais foram os resultados alcançados?</description>
    <inlineHelpText>3. Descreva uma situação em que você teve que lidar com uma tarefa complexa de forma eficiente. Como você organizou suas atividades e quais foram os resultados alcançados?</inlineHelpText>
    <label>3.Descreva uma situação em que você ...?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>