force-app/main/default/objects/Entrevista__c/fields/Xadm_4__c.field-meta.xml
<CustomField>
    <fullName>Xadm_4__c</fullName>
    <description>4. Como você prioriza suas tarefas quando enfrenta prazos apertados e múltiplas demandas simultâneas?</description>
    <inlineHelpText>4. Como você prioriza suas tarefas quando enfrenta prazos apertados e múltiplas demandas simultâneas?</inlineHelpText>
    <label>4. Como você prioriza suas tarefas...?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>