force-app/main/default/objects/Entrevista__c/fields/Xat_1__c.field-meta.xml
<CustomField>
    <fullName>Xat_1__c</fullName>
    <description>1. Descreva sua experiência anterior em lidar com equipamentos médicos. Quais tipos de equipamentos você já trabalhou e quais são suas áreas de especialização?</description>
    <inlineHelpText>1. Descreva sua experiência anterior em lidar com equipamentos médicos. Quais tipos de equipamentos você já trabalhou e quais são suas áreas de especialização?</inlineHelpText>
    <label>1. Descreva sua experiência anterior...?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>