force-app/main/default/objects/Entrevista__c/fields/Xat_3__c.field-meta.xml
<CustomField>
    <fullName>Xat_3__c</fullName>
    <description>3. Descreva uma situação em que você precisou trabalhar em equipe para resolver um problema relacionado a equipamentos médicos. Qual foi seu papel na equipe e como você contribuiu para alcançar a solução?</description>
    <inlineHelpText>3. Descreva uma situação em que você precisou trabalhar em equipe para resolver um problema relacionado a equipamentos médicos. Qual foi seu papel na equipe e como você contribuiu para alcançar a solução?</inlineHelpText>
    <label>3. Descreva uma situação em que você...?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>