force-app/main/default/objects/Entrevista__c/fields/Xat_4__c.field-meta.xml
<CustomField>
    <fullName>Xat_4__c</fullName>
    <description>4. Como você gerencia suas tarefas diárias em um ambiente onde múltiplos equipamentos médicos podem exigir manutenção simultaneamente? Como você decide qual equipamento atender primeiro e como mantém o equilíbrio entre urgência e qualidade do serviço?</description>
    <inlineHelpText>4. Como você gerencia suas tarefas diárias em um ambiente onde múltiplos equipamentos médicos podem exigir manutenção simultaneamente? Como você decide qual equipamento atender primeiro e como mantém o equilíbrio entre urgência e qualidade do serviço?</inlineHelpText>
    <label>4. Como você gerencia suas tarefas...?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>