force-app/main/default/objects/Entrevista__c/fields/Xcomercial_10__c.field-meta.xml
<CustomField>
    <fullName>Xcomercial_10__c</fullName>
    <description>10. O que você espera alcançar ao trabalhar conosco e como pretende contribuir para o nosso time?</description>
    <inlineHelpText>10. O que você espera alcançar ao trabalhar conosco e como pretende contribuir para o nosso time?</inlineHelpText>
    <label>10. O que você espera alcançar ao tr...?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>