force-app/main/default/objects/Entrevista__c/fields/Xcomercial_1__c.field-meta.xml
<CustomField>
    <fullName>Xcomercial_1__c</fullName>
    <description>Quais são seus objetivos pessoais e profissionais para os próximos 5 anos?</description>
    <inlineHelpText>Quais são seus objetivos pessoais e profissionais para os próximos 5 anos?</inlineHelpText>
    <label>1. Quais são seus objetivos pessoais...</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>