force-app/main/default/objects/Entrevista__c/fields/Xcomercial_2__c.field-meta.xml
<CustomField>
    <fullName>Xcomercial_2__c</fullName>
    <inlineHelpText>2. O que o motiva a trabalhar na área comercial de equipamentos médicos?</inlineHelpText>
    <label>2. O que o motiva a trabalhar na ár...?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>