force-app/main/default/objects/Entrevista__c/recordTypes/Administrativo.recordType-meta.xml
<RecordType>
    <fullName>Administrativo</fullName>
    <active>true</active>
    <label>Administrativo</label>
</RecordType>