force-app/main/default/objects/Entrevista__c/recordTypes/Assist_ncia_T_cnica.recordType-meta.xml
<RecordType>
    <fullName>Assist_ncia_T_cnica</fullName>
    <active>true</active>
    <label>Assistência Técnica</label>
</RecordType>