force-app/main/default/objects/Entrevista__c/recordTypes/Comercial.recordType-meta.xml
<RecordType>
    <fullName>Comercial</fullName>
    <active>true</active>
    <label>Comercial</label>
</RecordType>