force-app/main/default/objects/Entrevista__c/validationRules/Valida_12.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_12</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(X12_Como_soube_desta_vaga__c) == &apos;Indicação&apos;
&amp;&amp;
Quem_indicou__c  == null)

||

(TEXT(X12_Como_soube_desta_vaga__c) == &apos;&apos;
&amp;&amp;
Quem_indicou__c != null)</errorConditionFormula>
    <errorDisplayField>Quem_indicou__c</errorDisplayField>
    <errorMessage>Error</errorMessage>
</ValidationRule>