force-app/main/default/objects/Entrevista__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vaga__c</columns>
    <columns>Candidato__c</columns>
    <columns>Nome_do_candidato__c</columns>
    <columns>Data_e_Hora__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>